--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
 	
 	<h1>This is test git</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, repudiandae.</p>
 </body>
 </html>
